<resources>
    <string name="app_name">Jobpedia</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab_joblist">職位</string>
	<string name="tab_apply_record">已申請</string>
	<string name="tab_inbox">訊息</string>
	<string name="tab_self">我</string>
	<string name="title_applied">已申請職位</string>
	<string name="title_message">訊息</string>
	<string name="title_self">我</string>
	<string name="applied_apply">已申請</string>
	<string name="applied_passed">通過</string>
	<string name="applied_refused">已拒絕</string>
	<string name="job_search_hint">職位名稱、職位描述</string>
	<string name="job_filter_done">完成</string>
	<string name="job_filter_sort">排序</string>
	<string name="sort_type_date">發佈日期</string>
	<string name="sort_type_salary">薪資</string>
	<string name="sort_type_distance">距離</string>
	<string name="job_filter_refilter">重新篩選</string>
	<string name="job_filter_schedule">工作類型</string>
	<string name="filter_schedule_temp">臨時工</string>
	<string name="filter_schedule_part">兼職</string>
	<string name="filter_schedule_full">全職</string>
	<string name="filter_schedule_title">工作類型</string>
	<string name="filter_distance_title">最遠距離</string>
	<string name="filter_distance_any">ANY</string>
	<string name="filter_distance_mi2">2 MI</string>
	<string name="filter_distance_mi5">5 MI</string>
	<string name="filter_distance_mi10">10 MI</string>
	<string name="filter_distance_mi25">25 MI</string>
	<string name="filter_pay_title">小時薪水</string>
	<string name="filter_pay_size">$0</string>
	<string name="filter_industries_title">行業類別</string>
	<string name="default_user_name">未知姓名</string>
	<string name="default_user_title">未知職稱</string>
	<string name="self_my_resume">我的履歷</string>
	<string name="self_resume_description">請完善好基本資料和個人履歷</string>
	<string name="self_my_video">我的視頻</string>
	<string name="self_video_description">秀下你，你會被看中的機會越多哦！</string>
	<string name="self_my_settings">系統設置</string>
	<string name="self_settings_description">更改語言，訊息推送，隱私設置等</string>
	<string name="my_resume">履歷</string>
	<string name="my_resume_title">履歷</string>
	<string name="action_save">保存</string>
	<string name="resume_user_name">姓名</string>
	<string name="resume_user_phone">手機號</string>
	<string name="resume_job_name">職位</string>
	<string name="resume_area">地區</string>
	<string name="resume_address">地址</string>
	<string name="resume_email">EMAIL</string>
	<string name="resume_name_hint">請輸入您的姓名</string>
	<string name="resume_phone_hint">請輸入您的手機號</string>
	<string name="resume_job_hint">請填寫您的工作類型</string>
	<string name="resume_address_hint">請填寫您的工作地址</string>
	<string name="resume_email_hint">請填寫您的Email</string>
	<string name="resume_profile">自我介紹</string>
	<string name="self_login_text">登入</string>
	<string name="login_with_phone">手機號登入</string>
	<string name="register_with_phone">手機號註冊</string>
	<string name="jobinfo_description">職位描述</string>
	<string name="jobinfo_btn_apply">申請</string>
	<string name="jobinfo_worktype">工作類型</string>
	<string name="jobinfo_salary">小時薪水</string>
	<string name="jobinfo_distribute">發佈</string>
	<string name="jobinfo_format_salary">HK$%s</string>
	<string name="login_phone_number_hint">請輸入手機號碼</string>
	<string name="login_password">請輸入密碼</string>
	<string name="login_submit">登入</string>
	<string name="logining">正在登入</string>
	<string name="login_succeed">登入成功</string>
	<string name="register_phone_has_exist">手機號已存在</string>
	<string name="register_succeed">註冊成功！</string>
	<string name="register_right_action">註冊</string>
	<string name="login_get_resume_info_failed">獲取用戶資料失敗</string>
	<string name="right_action_logout">登出</string>
	<string name="right_action_login">登入</string>
	<string name="self_logout_alter">確認登出？</string>
	<string name="resume_upload">正在更新履歷</string>
	<string name="resume_upload_failed">履歷更新失敗！</string>
	<string name="resume_upload_succeed">履歷更新成功！</string>
	<string name="jobinfo_appling">正在申請…</string>
	<string name="tips_apply_failed">申請失敗</string>
	<string name="tips_apply_succeed">申請成功</string>
	<string name="tips_apply_applied_already">申請失敗，職位已經被申請</string>
	<string name="inbox_descrptio_recommend">您有0个筍工未查看</string>
	<string name="inbox_title_recommand">筍工</string>
	<string name="inbox_title_hr_message">好消息</string>
	<string name="inbox_descrption_hr_message">您有0條訊息未查看</string>
	<string name="resume_last_name">LastName</string>
	<string name="resume_first_name">FirstName</string>
	<string name="resume_age">年齡</string>
	<string name="resume_sex">性別</string>
	<string name="tips_login_first">請先登入…</string>
	<string name="joblist_salary">HK$%1$s</string>
	<string name="applied_need_login">請先登入</string>
	<string name="applied_empty">数据为空</string>
	<string name="job_search_local_hint">地址</string>
	<string name="spinner_item_choose">請选择</string>
	<string name="job_search_submit">搜索</string>
	<string name="joblist_recommend_tag">推薦</string>
	<string name="common_text_system_exit_msg">再按一次退出Jobpedia</string>
	<string name="applied_empty_history">已申請記錄為空</string>
	<string name="passed_empty_histroy">已通過記錄為空</string>
	<string name="main_login_failed">登入失敗，用戶名或密碼不正確</string>
	<string name="login_password_confrom">請確認密碼</string>
	<string name="register_password_match_failed">密碼不匹配</string>
	<string name="register_password_empty">密碼或確認密碼不能為空</string>
	<string name="apply_view_jobs">查看職位</string>
	<string name="apply_btn_login">登入</string>
	<string name="apply_unlogin_detail">登入後可查看您的申請記錄，如果您還沒有一個賬戶，現在去註冊並申請符合您的職位</string>
	<string name="apply_unlogin_title">我的申請記錄</string>
	<string name="joblist_search_keywords">關鍵字：%1$s</string>
	<string name="joblist_search_industry">行業：%1$s</string>
	<string name="joblist_empty_tips1">沒有找到相關職位</string>
	<string name="joblist_empty_tips2">嘗試輸入其他條件</string>
	<string name="inbox_unlogin_title">我的訊息</string>
	<string name="inbox_unlogin_detail">登入後可查看您的訊息, 如果您還沒有一個賬户, 現在就去註冊並申請符合您的職位</string>
	<string name="job_search_industry_all">所有行業</string>
	<string name="login_forget_psw">忘記密碼</string>
	<string name="login_title">登入</string>
	<string name="register_title">註冊</string>
	<string name="forget_description">輸入您的手機號，密碼將發送到您的手機。</string>
	<string name="cancel">取消</string>
	<string name="send_sms">發送</string>
	<string name="forget_content_hint">手機號</string>
	<string name="send_succed">發送成功</string>
	<string name="send_failed">發送失敗</string>
	<string name="login_send_sms">獲取驗證碼</string>
	<string name="login_send_sms_timer">獲取驗證碼(%ds)</string>
	<string name="forget_check_code_hint">請輸入短訊驗證碼</string>
	<string name="register_invalide_phone_number">手機號必須為8位數字</string>
	<string name="register_empty_checkcode">驗證碼不能為空</string>
	<string name="register_invalide_checkcode">驗證碼不正確</string>
	<string name="register_password_too_short">密碼長度不能少於6位</string>
	<string name="jobinfo_btn_apply_applied">已申請</string>
	<string name="self_photo_upload_succeed">上傳頭像成功</string>
	<string name="self_photo_upload_failed">上傳頭像失敗</string>
	<string name="network_invalid">網絡連接失敗</string>
	<string name="joblist_tip_loading">正在加載…</string>
	<string name="tips_load_failed">加載失敗…</string>
    <string name="time_range">%1$s-%2$s</string>
    <string name="date_range">%1$s-%2$s</string>
    <string name="dict_age">選擇年齡</string>
    <string name="dict_sex">選擇性別</string>
    <string name="dict_function">選擇職位</string>
    <string name="dict_area">選擇地區</string>
    <string name="resume_loading_jobinfo">正在加載用戶資料…</string>
    <string name="register_user_protocal">註冊代表你已同意用戶協議</string>
    <string name="app_name_title">Jobpedia</string>
    <string name="tips_invalide_phone_number">不是有效的手機號碼</string>
    <string name="terms_title">Terms of Use</string>
    <string name="default_salary">面議</string>
    <string name="resume_edit_head_add_title">個人頭像</string>
    <string name="resume_edit_info_title">個人資料</string>
    <string name="resume_edit_english_name">英文姓名</string>
    <string name="resume_edit_english_hint">HKID上的英文姓名</string>
    <string name="resume_edit_chn_name">中文姓名</string>
    <string name="resume_edit_chn_name_hint">HKID上的中文姓名</string>
    <string name="resume_edit_eng_name">英文名</string>
    <string name="resume_edit_phone">手機號碼(852)</string>
    <string name="resume_edit_email">Email</string>
    <string name="resume_edit_area">地區</string>
    <string name="resume_edit_function">職業</string>
    <string name="resume_edit_age">年齡</string>
    <string name="resume_edit_sex">性別</string>
    <string name="resume_edit_degree">學歷</string>
    <string name="resume_edit_workday">開始工作年份</string>
    <string name="resume_edit_self_recommend">自我介紹</string>
    <string name="hint_self_recommend_area">加上簡單的自我介紹，可顯著提高被錄用的機會</string>
	<string name="me_profile">基本資料</string>
	<string name="action_edit">編輯</string>
	<string name="me_work_experience">工作經驗</string>
	<string name="me_formate_phone">Tel: %1$s</string>
	<string name="me_formate_email">Email: %1$s</string>
	<string name="experience_home_title">工作經驗</string>
	<string name="action_add_experience">添加工作經驗</string>
	<string name="experience_format_company">公司：%1$s</string>
	<string name="experience_format_job">職位：%1$s</string>
	<string name="add_experience_company_name">公司名稱</string>
	<string name="add_experience_job_name">職位</string>
	<string name="add_experience_work_day">開始日期</string>
	<string name="add_experience_work_endtime">結束日期</string>
	<string name="work_content">工作內容：</string>
	<string name="add_experience_title">添加工作經驗</string>
	<string name="action_edit_finished">完成</string>
	<string name="facebook_app_id">556198331239063</string>
    <string name="fb_login_protocol_scheme">556198331239063</string>
	<string name="add_experience_failed">工作經驗添加失敗</string>
	<string name="add_experience_succeed">工作經驗添加成功</string>
	<string name="delete_work_exp_failed">刪除失敗</string>
	<string name="date_picker_title">請選擇日期</string>
	<string name="me_work_content">"工作內容 : "</string>
	<string name="modify_experience_succed">工作經驗修改成功</string>
	<string name="modify_experience_failed">工作經驗修改失敗</string>
	<string name="add_experience_title_modify">修改工作經驗</string>
	<string name="fb_register_failed">facebook登入失敗</string>
	<string name="no_workyears">暫無工作經驗</string>
	<string name="me_format_workyears">%1$d年工作經驗</string>
	<string name="resume_edit_necessary_row_not_empty">%1$s不能為空</string>
	<string name="tips_workday_error">開始工作時間錯誤</string>
	<string name="tips_phone_already_exists">手機號已存在</string>
	<string name="tips_argument_error">參數錯誤</string>
	<string name="delete_work_exp_confirm">確認刪除工作經驗？</string>
	<string name="resume_edit_phone_hint">香港8位手機號碼</string>
    <string name="company_info_name">公司名稱</string>
    <string name="company_info_name_hint">請填寫你的公司名稱</string>
    <string name="company_info_contact">聯絡人</string>
    <string name="company_info_contact_hint">請填寫公司聯絡人</string>
    <string name="company_info_phone">聯絡電話</string>
    <string name="company_info_email">電郵地址</string>
    <string name="company_info_business_number">商業登記號碼</string>
    <string name="company_info_address">地址</string>
    <string name="company_info_introduction">公司簡介</string>
    <string name="company_info_logo_description">*請添加公司Logo / 公司形象照片 / HR個人頭像，該頭像會顯示在求職者聊天中</string>
	<string name="add_ads_description">"*請添加該職位相關的工作環境相片，該相片的品質直接影響求職者的申請量\n*建議使用橫狀相片，否則在顯示是會出現變形情況\n*如不上傳相片，我們會自動根據該職位所屬的行業添加預設相片"</string>
	<string name="add_ads_job_name_title">職位名稱</string>
	<string name="add_ads_function_type_title">行業</string>
	<string name="add_ads_job_type_title">工作類型</string>
	<string name="add_ads_job_description">工作詳情:</string>
	<string name="add_ads_memo_hint">請輸入工作內容、要求、輪班時間(如有)、員工福利(如有).</string>
	<string name="row_name_address">地區</string>
	<string name="add_ads_salary_type_title">薪資類型</string>
	<string name="add_ads_start_date_title">開始日期</string>
	<string name="add_ads_end_date_title">結束日期</string>
	<string name="add_ads_start_time_title">開始時間</string>
	<string name="add_ads_end_time_title">結束時間</string>
	<string name="add_ads_salary_title">薪資</string>
	<string name="cancel_publish">取消發佈</string>
</resources>