<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:jobpedia="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/company_info_header"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="@dimen/resume_edit_common_left_margin"
        android:layout_marginRight="@dimen/resume_edit_common_right_margin"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_head_add" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/company_info_logo_description"
        android:textColor="@color/white_7f7f7f"
        android:textSize="12sp" />

    <include
        layout="@layout/divider_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:shrinkColumns="1"
        android:stretchColumns="1">

        <com.worksum.android.views.EditTableRow
            android:id="@+id/company_info_name"
            style="@style/resume_edit_raw_style"
            jobpedia:rowHint="@string/company_info_name_hint"
            jobpedia:rowNecessary="true"
            jobpedia:rowTitle="@string/company_info_name" />

        <com.worksum.android.views.EditTableRow
            android:id="@+id/company_info_contact"
            style="@style/resume_edit_raw_style"
            jobpedia:rowHint="@string/company_info_contact_hint"
            jobpedia:rowNecessary="true"
            jobpedia:rowTitle="@string/company_info_contact" />

        <com.worksum.android.views.EditTableRow
            android:id="@+id/company_info_phone"
            style="@style/resume_edit_raw_style"
            jobpedia:rowHint="@string/resume_edit_phone_hint"
            jobpedia:rowNecessary="false"
            jobpedia:rowTitle="@string/company_info_phone" />

        <com.worksum.android.views.EditTableRow
            android:id="@+id/company_info_email"
            style="@style/resume_edit_raw_style"
            jobpedia:rowNecessary="true"
            jobpedia:rowTitle="@string/company_info_email" />

        <com.worksum.android.views.EditTableRow
            android:id="@+id/company_info_business_number"
            style="@style/resume_edit_raw_style"
            jobpedia:rowDict="dictArea"
            jobpedia:rowNecessary="true"
            jobpedia:rowTitle="@string/company_info_business_number" />

        <com.worksum.android.views.EditTableRow
            android:id="@+id/company_info_address"
            style="@style/resume_edit_raw_style"
            jobpedia:rowDict="dictArea"
            jobpedia:rowNecessary="true"
            jobpedia:rowTitle="@string/company_info_address" />


        <include
            layout="@layout/divider_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp" />

        <TextView
            style="@style/resume_edit_title_style"
            android:text="@string/company_info_introduction" />

        <EditText
            android:id="@+id/company_info_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/self_recommend_area"
            android:gravity="top"
            android:padding="5dp"
            android:textColor="@color/white_7f7f7f"
            android:textColorHint="#bbbbbb"
            android:textSize="14sp" />
    </TableLayout>
</LinearLayout>