<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:jobpedia="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="1"
    android:stretchColumns="1"
    android:paddingRight="10dp"
    android:orientation="vertical">

    <com.worksum.android.views.EditTableRow
        android:layout_marginTop="20dp"
        android:id="@+id/add_experience_company_name"
        style="@style/resume_edit_raw_style"
        jobpedia:rowTitle="@string/add_experience_company_name"
        jobpedia:rowNecessary="true"
        />

    <com.worksum.android.views.EditTableRow
        android:id="@+id/add_experience_job_name"
        style="@style/resume_edit_raw_style"
        jobpedia:rowTitle="@string/add_experience_job_name"
        jobpedia:rowNecessary="true"/>

    <com.worksum.android.views.DictTableRow
        android:id="@+id/add_experience_work_day"
        style="@style/resume_edit_raw_style"
        jobpedia:rowTitle="@string/add_experience_work_day"
        />

    <com.worksum.android.views.DictTableRow
        android:id="@+id/add_experience_work_endtime"
        style="@style/resume_edit_raw_style"
        jobpedia:rowTitle="@string/add_experience_work_endtime"
        />

    <TextView
        android:id="@+id/add_experience_memo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white_7f7f7f"
        android:textSize="14sp"
        android:text="@string/work_content"
        />

    <EditText
        android:id="@+id/add_experience_work_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="@color/white_7f7f7f"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/self_recommend_area"
        android:gravity="top"
        android:padding="5dp" />
</TableLayout>