<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/forget_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:singleLine="true"
        android:textColor="@color/black_3e3e3e"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/login_forget_psw"/>

    <TextView
        android:id="@+id/forget_description"
        android:layout_below="@id/forget_title"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/forget_description"
        android:textColor="@color/black_3e3e3e"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/forget_content"
        android:layout_below="@id/forget_description"
        android:textSize="15sp"
        android:background="@color/gray_eeeeee"
        android:textColor="@color/black_3e3e3e"
        android:padding="12dp"
        android:inputType="number"
        android:hint="@string/forget_content_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_below="@id/forget_content"
        android:background="@color/gray_aaaaaa"
        android:orientation="horizontal"
        android:paddingTop="1px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/forget_cancel"
            style="@android:style/Widget.ActionButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black_3e3e3e"
            android:text="@string/cancel"
            android:layout_marginRight="1px"
            android:background="@drawable/forget_action_selector"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/forget_send"
            style="@android:style/Widget.ActionButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black_3e3e3e"
            android:text="@string/send_sms"
            android:background="@drawable/forget_action_selector"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>